gitops/dotnet-sample-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pipeline-dotnet-sample
  namespace: dojo-adachi2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipeline-dotnet-sample
  template:
    metadata:
      labels:
        app: pipeline-dotnet-sample
        deploymentconfig: pipeline-dotnet-sample
    spec:
      containers:
        - name: pipeline-dotnet-sample
          image: >-
            image-registry.openshift-image-registry.svc:5000/dojo-adachi2/pipeline-dotnet-sample-git@sha256:52808fe1fcf5cf8305b59470a00870f0650dd1ea850583f572f4aea0ebe5ed60
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  paused: false
